Migrate `Date` to `VenturaCalendarDate` across the codebase. Refactor corresponding methods, classes, and placeholder logic. Remove unused `Date` class and update imports. Enhancements include the addition of `@Getter`, `@Setter`, and `@AllArgsConstructor` annotations, replacing manual getter/setter implementations. Streamline event handling with better usage of enums, `SimpleDateFormat`, and placeholder registration. Improve code readability, consistency, and modernization.